--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@aws-sdk/client-s3": "3.673.0",
     "@aws-sdk/s3-presigned-post": "3.673.0",
     "@prisma/client": "5.18.0",
+    "@supabase/ssr": "^0.7.0",
     "next": "15.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
