--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
   "dependencies": {
     "@aws-sdk/client-s3": "3.673.0",
     "@aws-sdk/s3-presigned-post": "3.673.0",
+    "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "5.18.0",
     "@supabase/ssr": "^0.7.0",
     "next": "15.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "zod": "3.23.8"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/node": "24.6.0",
