--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "15.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.64.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.76"
