--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@aws-sdk/s3-presigned-post": "3.673.0",
     "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "5.18.0",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-slot": "^1.2.3",
     "@supabase/ssr": "^0.7.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.544.0",
     "next": "15.0.0",
     "next-themes": "^0.4.6",
