updated nutrition functionality

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,30 @@
 # Database
-DATABASE_URL="postgresql://user:password@localhost:5432/recipe_app?schema=public"
+DATABASE_URL=postgresql://username:password@localhost:5432/recipe_app
 
-# AWS S3
-AWS_REGION="us-west-2"
-AWS_ACCESS_KEY_ID=""
-AWS_SECRET_ACCESS_KEY=""
-S3_BUCKET="your-bucket-name"
-S3_PUBLIC_BASE_URL="https://your-cdn-or-bucket-url.example.com"
+# AWS S3 Configuration (Required)
+AWS_REGION=us-east-2
+S3_BUCKET=your-bucket-name
+AWS_ACCESS_KEY_ID=your-access-key
+AWS_SECRET_ACCESS_KEY=your-secret-key
+
+# Optional: CDN URL (leave empty for API proxy)
+# S3_PUBLIC_BASE_URL=https://your-cloudfront-domain.com
+
+# Supabase Configuration (Required for Authentication & RLS)
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+
+# USDA Food Database API (Optional - for nutrition data)
+FDC_API_KEY=your-usda-api-key
+
+# Feature Flags
+FOOD_MAPPING_V2=1
+HEALTH_SCORE_V2=1
+
+# Development API Key (for testing)
+DEV_API_KEY=your-dev-api-key
+
+# Demo user email (defaults to demo@example.com if not set)
+DEMO_USER_EMAIL=demo@example.com
