--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "typecheck": "tsc --noEmit",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
-    "seed:foods": "node scripts/seed-foods.js"
+    "seed:foods": "node scripts/seed-foods.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "prisma:seed": "prisma db seed",
+    "usda:import": "ts-node --transpile-only scripts/usda-import.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "3.673.0",
@@ -21,11 +25,13 @@
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@supabase/ssr": "^0.7.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "fuse.js": "^7.1.0",
     "lucide-react": "^0.544.0",
     "next": "15.0.0",
     "next-themes": "^0.4.6",
@@ -37,14 +43,25 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@types/node": "24.6.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^24.6.0",
     "@types/react": "19.1.15",
     "autoprefixer": "^10.4.21",
     "eslint": "9.11.1",
     "eslint-config-next": "15.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.2.0",
     "postcss": "^8.5.6",
     "prisma": "5.18.0",
     "tailwindcss": "^3.4.17",
-    "typescript": "5.6.3"
+    "ts-jest": "^29.4.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
