--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,3 +19,28 @@ jobs:
       - run: npm run lint
       - run: npm run typecheck
       - run: npm run build
+    env:
+      # Supabase Configuration (Required for build)
+      NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
+      NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
+      SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+      SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
+      
+      # Database
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      
+      # AWS S3 Configuration
+      AWS_REGION: ${{ secrets.AWS_REGION }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      S3_BUCKET: ${{ secrets.S3_BUCKET }}
+      
+      # Feature Flags
+      FOOD_MAPPING_V2: 1
+      HEALTH_SCORE_V2: 1
+      
+      # Development API Key
+      DEV_API_KEY: ${{ secrets.DEV_API_KEY }}
+      
+      # Demo user email
+      DEMO_USER_EMAIL: demo@example.com
