added chips and updated tags for recipes

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "lint:pack": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/lint-curated-pack.ts",
     "usda:saturate": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/usda-saturate.ts",
     "aliases:backfill": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/aliases-backfill.ts",
-    "aliases:backfill:fast": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/aliases-backfill-fast.ts"
+    "aliases:backfill:fast": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/aliases-backfill-fast.ts",
+    "seed:tags": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register prisma/seeds/tags.seed.ts",
+    "features:backfill": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/backfill-recipe-features.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "3.673.0",
