--- a/.github/workflows/cron-rollup.yml
+++ b/.github/workflows/cron-rollup.yml
@@ -11,8 +11,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-        with: { node-version: "20" }
-      - run: npm ci --omit=dev
+        with: { node-version: "20", cache: "npm" }
+      - run: npm ci
       - name: Generate Prisma Client
         run: npx prisma generate
       - name: Run rollup
@@ -20,4 +20,4 @@ jobs:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}   # Postgres connection
           SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }} # if your prisma client needs it
           NODE_ENV: production
-        run: npm run rollup:interactions
+        run: npx ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/rollup-interactions.ts
