--- a/.github/workflows/cron-similar.yml
+++ b/.github/workflows/cron-similar.yml
@@ -11,12 +11,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-        with: { node-version: "20" }
-      - run: npm ci --omit=dev
+        with: { node-version: "20", cache: "npm" }
+      - run: npm ci
       - name: Generate Prisma Client
         run: npx prisma generate
       - name: Build similar graph
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
           NODE_ENV: production
-        run: npm run similar:build
+        run: npx ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/build-similar.ts
