--- a/package.json
+++ b/package.json
@@ -45,13 +45,15 @@
     "@supabase/ssr": "^0.7.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/papaparse": "^5.3.16",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "fuse.js": "^7.1.0",
     "lucide-react": "^0.544.0",
     "nanoid": "^5.1.6",
-    "next": "15.0.0",
+    "next": "^15.5.6",
     "next-themes": "^0.4.6",
     "papaparse": "^5.5.3",
     "react": "18.3.1",
@@ -71,7 +73,7 @@
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
     "autoprefixer": "^10.4.21",
-    "eslint": "9.11.1",
+    "eslint": "^9.38.0",
     "eslint-config-next": "15.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.2.0",
