--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@sentry/nextjs": "^10.22.0",
     "@supabase/ssr": "^0.7.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/papaparse": "^5.3.16",
