sentry functionality updated

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,9 @@ FDC_API_KEY=your-usda-api-key
 FOOD_MAPPING_V2=1
 HEALTH_SCORE_V2=1
 
+# Sentry Configuration
+SENTRY_DB_SPAN_SAMPLE=1
+
 # Development API Key (for testing)
 DEV_API_KEY=your-dev-api-key
 
