--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@supabase/ssr": "^0.7.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/papaparse": "^5.3.16",
+    "@types/zxcvbn": "^4.4.5",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
@@ -62,7 +63,8 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.64.0",
     "tailwind-merge": "^3.3.1",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.9.1",
