--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,12 @@ S3_BUCKET=your-bucket-name
 AWS_ACCESS_KEY_ID=your-access-key
 AWS_SECRET_ACCESS_KEY=your-secret-key
 
-# Optional: CDN URL (leave empty for API proxy)
+# CloudFront CDN Configuration (Recommended for better performance)
+# Server-side (used to build full image URLs)
+CLOUDFRONT_IMAGE_BASE=https://dXXXXXXXXXXXXX.cloudfront.net
+# Client-side (for preconnect and next.config.ts remotePatterns)
+NEXT_PUBLIC_CLOUDFRONT_HOST=dXXXXXXXXXXXXX.cloudfront.net
+# Legacy (deprecated, use CLOUDFRONT_IMAGE_BASE instead)
 # S3_PUBLIC_BASE_URL=https://your-cloudfront-domain.com
 
 # Supabase Configuration (Required for Authentication & RLS)
