avoid illegal cookie writes, guard cookie set/remove to only run where allowed

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Database
 DATABASE_URL=postgresql://username:password@localhost:5432/recipe_app
+DIRECT_URL=postgresql://username:password@localhost:5432/recipe_app
 
 # AWS S3 Configuration (Required)
 AWS_REGION=us-east-2
