--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "seed:tags": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register prisma/seeds/tags.seed.ts",
     "features:backfill": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/backfill-recipe-features.ts",
     "rollup:interactions": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/rollup-interactions.ts",
-    "similar:build": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/build-similar.ts"
+    "similar:build": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/build-similar.ts",
+    "test:fdc-api": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/test-fdc-api.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "3.673.0",
