--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "cross-env": "^10.1.0",
     "eslint": "^9.38.0",
     "eslint-config-next": "15.0.0",
+    "fast-check": "^4.3.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.2.0",
     "postcss": "^8.5.6",
