Add eval documentation, improve parser docs, and cleanup
Documentation:
- Add docs/eval.md with comprehensive evaluation system documentation
- Update docs/s1-parser.md with:
  - Normalization order documentation
  - Locale and edge cases (comma decimals, trailing periods, irregular plurals)
  - Approximate quantities and optional ingredients
  - State/cooked qualifiers for Sprint 3 readiness
  - Pinch/dash handling clarification
  - Performance benchmarks and telemetry hooks
- Update CHANGELOG.md with detailed eval system information
- Update docs/README.md to include eval.md

Scripts:
- Add scripts/migrate-smoke.ts for migration safety testing
- Add scripts/parser-bench.ts for performance benchmarking
- Add npm scripts: migrate:smoke, parser:bench

Cleanup:
- Remove completed Sprint 1 issue files (.github/issues/s1-*.md)

All improvements align with Sprint 1 tightening suggestions.

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "seed:tags": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register prisma/seeds/tags.seed.ts",
     "features:backfill": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/backfill-recipe-features.ts",
     "rollup:interactions": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/rollup-interactions.ts",
+    "migrate:smoke": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/migrate-smoke.ts",
+    "parser:bench": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/parser-bench.ts",
     "similar:build": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/build-similar.ts",
     "test:fdc-api": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/test-fdc-api.ts"
   },
