Add CI workflows, eval gates, and ops documentation
GitHub Actions:
- Add .github/workflows/eval.yml - Eval gate with P@1/MAE checks
- Add .github/workflows/migrate-smoke.yml - Migration smoke tests
- Add .github/workflows/parser-bench.yml - Parser performance benchmarks

Scripts:
- Add scripts/ci-check-eval-gates.js - Validates eval metrics against thresholds
- Add npm run eval script to package.json

Documentation:
- Add docs/ops.md - Feature flags, rollout, monitoring, and rollback procedures

All workflows run on PRs with appropriate path filters and include
PostgreSQL services for database-dependent tests.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "rollup:interactions": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/rollup-interactions.ts",
     "migrate:smoke": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/migrate-smoke.ts",
     "parser:bench": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/parser-bench.ts",
+    "eval": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register eval/run.ts",
     "similar:build": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/build-similar.ts",
     "test:fdc-api": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/test-fdc-api.ts"
   },
