Add comprehensive CI automation and workflow improvements
Danger & Code Quality:
- Add dangerfile.ts to enforce tests when parser code changes
- Add .github/workflows/danger.yml for PR code quality checks

Eval Baseline:
- Add .github/workflows/eval-main.yml to generate baseline on main branch
- Update eval.yml to download and compare against main baseline
- Update ci-check-eval-gates.js to support baseline directory argument

CI Optimizations:
- Add npm cache to all workflows
- Add Prisma generate step to database-dependent workflows

Code Ownership:
- Add .github/CODEOWNERS for clear ownership of code areas

PR Automation:
- Add .github/workflows/size.yml for automatic PR size labeling
- Add .github/dependabot.yml for automated dependency updates

Environment Variable Checks:
- Add .github/workflows/env-example-check.yml
- Add scripts/check-env-example.js to ensure env vars are documented

All improvements align with Sprint 1 tightening requirements.

--- a/.github/workflows/eval.yml
+++ b/.github/workflows/eval.yml
@@ -37,8 +37,12 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: "npm"
       
       - run: npm ci
+      
+      - name: Prisma generate
+        run: npx prisma generate
       
       - name: Run parser tests
         run: npm test src/lib/parse
@@ -46,8 +50,18 @@ jobs:
       - name: Run eval suite
         run: npm run eval
       
+      - name: Download baseline from main
+        uses: dawidd6/action-download-artifact@v3
+        with:
+          name: eval-baseline
+          path: baseline
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          workflow: eval-main.yml
+          commit: ${{ github.event.pull_request.base.sha }}
+        continue-on-error: true
+      
       - name: Check gates
-        run: node scripts/ci-check-eval-gates.js
+        run: node scripts/ci-check-eval-gates.js --baselineDir=baseline
       
       - uses: actions/upload-artifact@v4
         with:
