Fix CI workflows: add migrations to eval and fix size action version
- Add prisma migrate deploy to eval.yml and eval-main.yml
- Fix size-label-action version (v0.5.0 instead of v0.5.6)

--- a/.github/workflows/eval-main.yml
+++ b/.github/workflows/eval-main.yml
@@ -43,6 +43,9 @@ jobs:
       - name: Prisma generate
         run: npx prisma generate
       
+      - name: Run migrations
+        run: npx prisma migrate deploy
+      
       - run: npm run eval
       
       - uses: actions/upload-artifact@v4
