--- a/.github/workflows/eval.yml
+++ b/.github/workflows/eval.yml
@@ -44,6 +44,9 @@ jobs:
       - name: Prisma generate
         run: npx prisma generate
       
+      - name: Run migrations
+        run: npx prisma migrate deploy
+      
       - name: Run parser tests
         run: npm test src/lib/parse
       
