--- a/.github/workflows/migrate-smoke.yml
+++ b/.github/workflows/migrate-smoke.yml
@@ -26,6 +26,7 @@ jobs:
     
     env:
       DATABASE_URL: postgresql://postgres:postgres@localhost:5432/testdb
+      DIRECT_URL: postgresql://postgres:postgres@localhost:5432/testdb
     
     steps:
       - uses: actions/checkout@v4
