feat: Enhanced USDA saturation with cross-dataset dedupe and strict filtering
- Added cross-dataset deduplication with Foundation precedence over SR Legacy
- Implemented smart macro tolerance (15% for large values, absolute for small values)
- Enhanced filtering to exclude restaurants, branded products, prepared meals, snacks
- Added state detection (raw/cooked/baked/etc.) for better deduplication
- Expanded category mapping to include fish, shellfish, herbs, spices, nuts
- Added macro sanity validation (30% tolerance)
- Created preview-imports script for dry-run inspection
- Successfully imported 1,439 high-quality ingredient foods across all major categories

Import stats:
- 532 meat items (proteins, fish, shellfish, eggs)
- 275 vegetable items
- 154 dairy items
- 136 legume items (beans, nuts, tofu)
- 104 oil items
- 83 fruit items
- 78 flour items
- 46 rice items
- Cross-dataset duplicates caught: 245
- Unwanted items filtered: 1,731

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "seed:curated:batch": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/seed-curated-batch.ts",
     "lint:pack": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/lint-curated-pack.ts",
     "usda:saturate": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/usda-saturate.ts",
+    "usda:saturate:mini": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/usda-saturate.ts --files=./data/usda/foundation-mini.json,./data/usda/sr-legacy-mini.json",
+    "usda:saturate:both": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/usda-saturate.ts --files=./data/usda/fdc.json",
     "aliases:backfill": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/aliases-backfill.ts",
     "aliases:backfill:fast": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/aliases-backfill-fast.ts",
     "seed:tags": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register prisma/seeds/tags.seed.ts",
