chore: Remove large USDA dataset files from git tracking
- Added fdc.json, fdc.jsonl, and sr-legacy-sample.jsonl to .gitignore
- Removed these files from git history (files remain locally)
- Only mini test datasets (foundation-mini.json, sr-legacy-mini.json) are tracked
- This reduces repository size and prevents accidentally committing large datasets

--- a/.gitignore
+++ b/.gitignore
@@ -83,11 +83,14 @@ client_secret.json
 src/data/usda/**
 !src/data/usda/.keep
 
-# Large USDA data files
+# Large USDA data files (keep only mini test files)
 data/usda/sr-legacy.jsonl
 data/usda/survey.jsonl
 data/usda/FoodData_Central_sr_legacy_food_json_2018-04.json
 data/usda/FoodData_Central_foundation_food_json_2025-04-24.json
+data/usda/fdc.json
+data/usda/fdc.jsonl
+data/usda/sr-legacy-sample.jsonl
 
 # Local CSV exports you don't want to commit accidentally
 data/curated/tmp/**
