Add database seeding to eval-main workflow
Seed database with Foundation + SR Legacy mini dataset before running eval
to generate baseline with food data. This ensures the baseline artifact
is created with a populated database for accurate metric comparisons.

--- a/.github/workflows/eval-main.yml
+++ b/.github/workflows/eval-main.yml
@@ -47,6 +47,9 @@ jobs:
       - name: Run migrations
         run: npx prisma migrate deploy
       
+      - name: Seed database (Foundation + SR Legacy)
+        run: npm run usda:saturate:mini
+      
       - run: npm run eval
       
       - uses: actions/upload-artifact@v4
