Add missing environment variables to .env.example
Adds all missing environment variables to .env.example to satisfy
CI parity check:

- Feature flags: ENABLE_PORTION_V2, ENABLE_BRANDED_SEARCH
- USDA/FDC config: USDA_BULK_IMPORT_ENABLED, FDC_RATE_LIMIT_PER_HOUR
- Debug flags: NUTRITION_DEBUG, TEST_FLAG
- Site config: NEXT_PUBLIC_SITE_URL, NEXT_PUBLIC_CLOUDFRONT_IMAGE_BASE
- Cron: CRON_SECRET
- Vercel auto-set vars: VERCEL_ENV, VERCEL, NEXT_PHASE, NEXT_RUNTIME, BUILD_TIME

All variables now documented with appropriate descriptions and defaults.

--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,14 @@ AWS_SECRET_ACCESS_KEY=your-secret-key
 CLOUDFRONT_IMAGE_BASE=https://dXXXXXXXXXXXXX.cloudfront.net
 # Client-side (for preconnect and next.config.ts remotePatterns)
 NEXT_PUBLIC_CLOUDFRONT_HOST=dXXXXXXXXXXXXX.cloudfront.net
+# Alternative client-side base URL (used if CLOUDFRONT_IMAGE_BASE not set)
+NEXT_PUBLIC_CLOUDFRONT_IMAGE_BASE=https://dXXXXXXXXXXXXX.cloudfront.net
 # Legacy (deprecated, use CLOUDFRONT_IMAGE_BASE instead)
 # S3_PUBLIC_BASE_URL=https://your-cloudfront-domain.com
+
+# Site Configuration
+# Public site URL (used for generating absolute URLs)
+NEXT_PUBLIC_SITE_URL=https://your-site.com
 
 # Supabase Configuration (Required for Authentication & RLS)
 NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
@@ -24,10 +30,18 @@ SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 
 # USDA Food Database API (Optional - for nutrition data)
 FDC_API_KEY=your-usda-api-key
+# FDC API rate limit per hour (default: 1000)
+FDC_RATE_LIMIT_PER_HOUR=1000
+# Enable USDA bulk import (default: false)
+USDA_BULK_IMPORT_ENABLED=false
 
 # Feature Flags
 FOOD_MAPPING_V2=1
 HEALTH_SCORE_V2=1
+# Enable Portion V2 resolution (new 5-tier fallback system)
+ENABLE_PORTION_V2=false
+# Enable branded food search via FDC API
+ENABLE_BRANDED_SEARCH=false
 
 # Sentry Configuration
 SENTRY_DB_SPAN_SAMPLE=1
@@ -37,3 +51,22 @@ DEV_API_KEY=your-dev-api-key
 
 # Demo user email (defaults to demo@example.com if not set)
 DEMO_USER_EMAIL=demo@example.com
+
+# Cron Jobs
+# Secret key for authenticating cron job requests
+CRON_SECRET=your-cron-secret-key
+
+# Debug Flags
+# Enable nutrition calculation debug logging (set to "1" to enable)
+NUTRITION_DEBUG=0
+# Test flag for development/testing (set to "1" or "true" to enable)
+TEST_FLAG=false
+
+# Vercel Environment Variables (Auto-set by Vercel, documented for reference)
+# These are automatically set by Vercel during deployment/build
+# You typically don't need to set these manually
+VERCEL_ENV=production
+VERCEL=1
+NEXT_PHASE=phase-production-build
+NEXT_RUNTIME=nodejs
+BUILD_TIME=true
