Add database seeding to eval workflow
Seed database with Foundation + SR Legacy mini dataset before running
eval to match the baseline generation environment. This ensures
consistent database state for accurate metric comparisons.

Previously, baseline was generated with seeded data but PR eval ran
against empty database, causing invalid comparisons.

--- a/.github/workflows/eval.yml
+++ b/.github/workflows/eval.yml
@@ -48,6 +48,9 @@ jobs:
       - name: Run migrations
         run: npx prisma migrate deploy
       
+      - name: Seed database (Foundation + SR Legacy)
+        run: npm run usda:saturate:mini
+      
       - name: Run parser tests
         run: npm test src/lib/parse
       
