Add database seeding verification to eval workflow
Add verification step after seeding to ensure foods were created.
This will help diagnose eval failures caused by empty database.

Also fixes missing glob import in ci-check-eval-gates.js to properly
load baseline artifacts instead of always using hardcoded Sprint 0 baseline.

--- a/.github/workflows/eval.yml
+++ b/.github/workflows/eval.yml
@@ -51,6 +51,9 @@ jobs:
       - name: Seed database (Foundation + SR Legacy)
         run: npm run usda:saturate:mini
       
+      - name: Verify database seeding
+        run: ts-node --project tsconfig.scripts.json --transpile-only scripts/verify-seeding.ts
+      
       - name: Run parser tests
         run: npm test src/lib/parse
       
