Fix PR size label workflow permissions and resolve merge conflict
Resolve merge conflict in .github/workflows/size.yml:
- Keep permissions section (fixes 403 error)
- Keep XXL size category (1600+ lines)
- Use v0.5.0 of size-label-action

This fixes the 'Resource not accessible by integration' error when
the workflow tries to add size labels to PRs.

--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "seed:tags": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register prisma/seeds/tags.seed.ts",
     "features:backfill": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/backfill-recipe-features.ts",
     "rollup:interactions": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/rollup-interactions.ts",
+    "migrate:smoke": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/migrate-smoke.ts",
+    "parser:bench": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/parser-bench.ts",
+    "eval": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register eval/run.ts",
     "similar:build": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/build-similar.ts",
     "test:fdc-api": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/test-fdc-api.ts"
   },
@@ -72,15 +75,17 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
-    "@types/node": "^24.6.0",
+    "@types/node": "^24.10.0",
     "@types/react": "19.1.15",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
     "autoprefixer": "^10.4.21",
     "cross-env": "^10.1.0",
+    "danger": "^13.0.5",
     "eslint": "^9.38.0",
     "eslint-config-next": "15.0.0",
     "fast-check": "^4.3.0",
+    "glob": "^11.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.2.0",
     "postcss": "^8.5.6",
