--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "parser:bench": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/parser-bench.ts",
     "eval": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register eval/run.ts",
     "similar:build": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/build-similar.ts",
-    "test:fdc-api": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/test-fdc-api.ts"
+    "test:fdc-api": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/test-fdc-api.ts",
+    "verify:seeding": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/verify-seeding.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "3.673.0",
