--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "eval": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register eval/run.ts",
     "similar:build": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/build-similar.ts",
     "test:fdc-api": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/test-fdc-api.ts",
-    "verify:seeding": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/verify-seeding.ts"
+    "verify:seeding": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/verify-seeding.ts",
+    "seed:portion-overrides": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/seed-portion-overrides.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "3.927.0",
