fix: Update build configuration for cross-platform compatibility
- Revert build script to work on Mac by default
- Add build:no-telemetry script for Windows OneDrive issues
- Exclude dangerfile.ts and scripts from Next.js compilation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,6 +40,8 @@
     "**/*.test.ts",
     "**/*.test.tsx",
     "**/*.spec.ts",
-    "**/*.spec.tsx"
+    "**/*.spec.tsx",
+    "dangerfile.ts",
+    "scripts/**/*"
   ]
 }
