--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "cross-env NEXT_TELEMETRY_DISABLED=1 next build",
+    "build": "next build",
+    "build:no-telemetry": "cross-env NEXT_TELEMETRY_DISABLED=1 next build",
     "start": "next start",
     "postinstall": "prisma generate",
     "lint": "eslint .",
