--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "test:fdc-api": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/test-fdc-api.ts",
     "verify:seeding": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/verify-seeding.ts",
     "seed:portion-overrides": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/seed-portion-overrides.ts",
-    "portion:compare": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/compare-resolvers.ts"
+    "portion:compare": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/compare-resolvers.ts",
+    "seed:synonyms": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/seed-synonyms.ts",
+    "seed:synonyms:dry": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/seed-synonyms.ts --dry-run"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "3.927.0",
