feat: Sprint 4.6-4.7 - Improve P@1 from 62.6% to 82.3% (+19.7pp)
Major improvements:
- Phase A: Fixed portion calculations (eggs, chicken breasts) +15 FoodUnits
- Phase B: Enhanced ranking algorithm (fat qualifiers, name simplicity, category boosting)
- Phase C: Added missing foods (protein powders, tofu aliases) +4 foods
- Phase D: Added critical foods (salt, oat milk, soy/almond milk, half&half, heavy cream) +6 foods
- Phase Nuts: Added 6 nut template foods (hazelnuts, pine nuts, macadamia, brazil, pistachios, pecans)
- Boosted template food popularity to 1000 for better ranking

New scripts:
- scripts/phase-a-fix-portions.ts - Fix portion resolution bugs
- scripts/phase-b-add-missing-foods.ts - Add high-impact missing foods
- scripts/phase-c-add-missing-foods.ts - Add protein powders and tofu
- scripts/phase-d-add-critical-foods.ts - Add salt, oat milk, cream variants
- scripts/sprint-7-add-nuts-template.ts - Add missing nuts as templates
- scripts/boost-template-food-popularity.ts - Boost template food rankings
- scripts/create-gold-short.ts - Extract failures for focused testing
- scripts/debug-*.ts - Various debugging utilities

Results:
- P@1: 62.6% â†’ 82.3% (+19.7pp improvement)
- Failures: 99 â†’ 47 cases
- MAE: 72.9g â†’ 65.2g

Remaining issues:
- Volume portion resolution needs work
- Some template food over-ranking (ketchup matching tomato)
- State matching (cooked vs raw) needs improvement

--- a/package.json
+++ b/package.json
@@ -34,13 +34,41 @@
     "migrate:smoke": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/migrate-smoke.ts",
     "parser:bench": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/parser-bench.ts",
     "eval": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register eval/run.ts",
+    "eval:analyze": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register eval/analyze.ts",
     "similar:build": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/build-similar.ts",
     "test:fdc-api": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/test-fdc-api.ts",
     "verify:seeding": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/verify-seeding.ts",
     "seed:portion-overrides": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/seed-portion-overrides.ts",
     "portion:compare": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/compare-resolvers.ts",
     "seed:synonyms": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/seed-synonyms.ts",
-    "seed:synonyms:dry": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/seed-synonyms.ts --dry-run"
+    "seed:synonyms:dry": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/seed-synonyms.ts --dry-run",
+    "import:missing-foods": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/import-missing-foods.ts",
+    "import:missing-foods:dry": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/import-missing-foods.ts --dry-run",
+    "debug:search": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/debug-search.ts",
+    "add:aliases": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/add-user-friendly-aliases.ts",
+    "add:aliases:dry": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/add-user-friendly-aliases.ts --dry-run",
+    "phase4": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/phase-4-add-plurals-and-foods.ts",
+    "phase4:dry": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/phase-4-add-plurals-and-foods.ts --dry-run",
+    "fix:portions": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/fix-template-food-portions.ts",
+    "fix:portions:dry": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/fix-template-food-portions.ts --dry-run",
+    "phaseB": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/phase-b-add-missing-foods.ts",
+    "phaseB:dry": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/phase-b-add-missing-foods.ts --dry-run",
+    "create:gold-short": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/create-gold-short.ts",
+    "eval:short": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register eval/run.ts eval/gold.short.csv",
+    "eval:short:analyze": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register eval/analyze.ts",
+    "sprint7:nuts": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/sprint-7-add-nuts-template.ts",
+    "sprint7:nuts:dry": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/sprint-7-add-nuts-template.ts --dry-run",
+    "phaseA:debug": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/phase-a-debug-portions.ts",
+    "phaseA:fix": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/phase-a-fix-portions.ts",
+    "phaseA:fix:dry": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/phase-a-fix-portions.ts --dry-run",
+    "phaseC:add": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/phase-c-add-missing-foods.ts",
+    "phaseC:add:dry": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/phase-c-add-missing-foods.ts --dry-run",
+    "debug:categories": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/debug-category-matching.ts",
+    "phaseD:add": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/phase-d-add-critical-foods.ts",
+    "phaseD:add:dry": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/phase-d-add-critical-foods.ts --dry-run",
+    "debug:salt": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/debug-salt-search.ts",
+    "check:salt": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/check-salt-in-db.ts",
+    "boost:popularity": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/boost-template-food-popularity.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "3.927.0",
