feat: Phase E - Improve P@1 from 82.3% to 84.2% (+1.9pp)
Major improvements:
- Phase E Step 1: Implemented tiered popularity system
  - Primary foods (chicken, milk, rice): 1000
  - Derivatives (oat milk, tofu): 500
  - Condiments (ketchup, mustard): 100
  - Specialty (chia seeds, nutritional yeast): 50

- Phase E Step 2: Enhanced ranking algorithm
  - Added derivative/condiment penalty (-3.0) to prevent ketchup matching tomato
  - Added exact qualifier matching (-1.8 penalty) for fat percentages (2%, skim, whole)
  - Fixed tomatoâ†’ketchup failures (no longer in top 10)

Results:
- P@1: 84.2% (up from 82.3%, +1.9pp)
- Failures: 42/265 (down from 47)
- MAE: 61.8g (down from 65.2g)
- Overall progress: 62.6% â†’ 84.2% (+21.6pp since Sprint 4.6 start)

New scripts:
- scripts/phase-e-fix-popularity.ts - Tiered popularity system
- .cursor/plans/phase-e-systematic-fixes.md - Phase E plan
- .cursor/plans/next-steps-to-87.md - Next steps plan

--- a/package.json
+++ b/package.json
@@ -68,7 +68,9 @@
     "phaseD:add:dry": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/phase-d-add-critical-foods.ts --dry-run",
     "debug:salt": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/debug-salt-search.ts",
     "check:salt": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/check-salt-in-db.ts",
-    "boost:popularity": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/boost-template-food-popularity.ts"
+    "boost:popularity": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/boost-template-food-popularity.ts",
+    "phaseE:popularity": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/phase-e-fix-popularity.ts",
+    "phaseE:popularity:dry": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/phase-e-fix-popularity.ts --dry-run"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "3.927.0",
