latest sprint 4 push

--- a/.env.example
+++ b/.env.example
@@ -70,3 +70,7 @@ VERCEL=1
 NEXT_PHASE=phase-production-build
 NEXT_RUNTIME=nodejs
 BUILD_TIME=true
+
+#Fatsecret Platform API
+FATSECRET_CLIENT_ID=1111111111111111111111111111
+FATSECRET_CLIENT_SECRET=1111111111111111111111111111
