--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:no-telemetry": "cross-env NEXT_TELEMETRY_DISABLED=1 next build",
     "start": "next start",
     "postinstall": "prisma generate",
-    "lint": "eslint .",
+    "lint": "node scripts/lint.js",
     "lint:ci": "eslint . --max-warnings 500",
     "typecheck": "tsc --noEmit",
     "prisma:generate": "prisma generate",
@@ -56,6 +56,10 @@
     "create:gold-short": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/create-gold-short.ts",
     "eval:short": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register eval/run.ts eval/gold.short.csv",
     "eval:short:analyze": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register eval/analyze.ts",
+    "analyze:patterns": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/analyze-failure-patterns.ts",
+    "debug:volume": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/debug-volume-resolution.ts",
+    "calc:density": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/calculate-missing-density.ts",
+    "calc:density:dry": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/calculate-missing-density.ts --dry-run",
     "sprint7:nuts": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/sprint-7-add-nuts-template.ts",
     "sprint7:nuts:dry": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/sprint-7-add-nuts-template.ts --dry-run",
     "phaseA:debug": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/phase-a-debug-portions.ts",
@@ -70,7 +74,13 @@
     "check:salt": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/check-salt-in-db.ts",
     "boost:popularity": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/boost-template-food-popularity.ts",
     "phaseE:popularity": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/phase-e-fix-popularity.ts",
-    "phaseE:popularity:dry": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/phase-e-fix-popularity.ts --dry-run"
+    "phaseE:popularity:dry": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/phase-e-fix-popularity.ts --dry-run",
+    "phaseE:density": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/phase-e-add-density.ts",
+    "phaseE:density:dry": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/phase-e-add-density.ts --dry-run",
+    "phaseE:aliases": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/phase-e-add-missing-aliases.ts",
+    "phaseE:aliases:dry": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/phase-e-add-missing-aliases.ts --dry-run",
+    "phaseF:aliases": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/phase-f-add-missing-aliases.ts",
+    "phaseF:aliases:dry": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/phase-f-add-missing-aliases.ts --dry-run"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "3.927.0",
