--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
+    "@rushstack/eslint-patch": "^1.15.0",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
