--- a/.env.example
+++ b/.env.example
@@ -71,6 +71,9 @@ NEXT_PHASE=phase-production-build
 NEXT_RUNTIME=nodejs
 BUILD_TIME=true
 
-#Fatsecret Platform API
+# FatSecret Platform API
 FATSECRET_CLIENT_ID=1111111111111111111111111111
 FATSECRET_CLIENT_SECRET=1111111111111111111111111111
+ENABLE_FATSECRET=true
+FATSECRET_MIN_CONFIDENCE=0.7
+FATSECRET_TIMEOUT_MS=2500
