Document FatSecret region setting

--- a/.env.example
+++ b/.env.example
@@ -77,3 +77,4 @@ FATSECRET_CLIENT_SECRET=1111111111111111111111111111
 ENABLE_FATSECRET=true
 FATSECRET_MIN_CONFIDENCE=0.7
 FATSECRET_TIMEOUT_MS=2500
+FATSECRET_REGION=US
